--- a/.github/workflows/developWorkflow.yml
+++ b/.github/workflows/developWorkflow.yml
@@ -35,12 +35,29 @@ jobs:
         with:
           name: apk
           path: app/build/outputs/apk/debug/app-debug.apk 
+          
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: newtag
+          release_name: Automatic Release
+          draft: false
+          prerelease: false
 
-  Share:
-    name: Share on Slack
-    needs: build
-    runs-on: ubuntu-latest
-    steps:        
+      - name: Upload APK to Release
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_RELEASE }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./app/build/outputs/apk/debug/app-debug.apk
+          asset_name: app-debug.apk
+          asset_content_type: application/zip
+     
       - name: Post to a Slack channel
         id: slack
         uses: slackapi/slack-github-action@v1.23.0
