--- a/.github/workflows/developWorkflow.yml
+++ b/.github/workflows/developWorkflow.yml
@@ -35,28 +35,6 @@ jobs:
         with:
           name: apk
           path: app/build/outputs/apk/debug/app-debug.apk 
-          
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: newtag
-          release_name: Automatic Release
-          draft: false
-          prerelease: false
-
-      - name: Upload APK to Release
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./app/build/outputs/apk/debug/app-debug.apk
-          asset_name: app-debug.apk
-          asset_content_type: application/zip
      
       - name: Post to a Slack channel
         id: slack
@@ -76,7 +54,7 @@ jobs:
         with:
           slack_token: ${{ secrets.SLACK_BOT_TOKEN }}
           channel_id: "C02PBPERW8N"
-          file_path: "app/build/outputs/apk/debug/app-debug.apk"
+          file_path: "./app/build/outputs/apk/debug/app-debug.apk"
           initial_comment: "build file"
           
       - name: Upload to slack step - change log
