--- a/.github/workflows/developWorkflow.yml
+++ b/.github/workflows/developWorkflow.yml
@@ -69,6 +69,7 @@ jobs:
    name: Release APK
    needs: build
    runs-on: ubuntu-latest
+   permissions: write-all
    steps:
      - name: Download APK from build
        uses: actions/download-artifact@v1
